MDL-81238 quiz: Fix maximum grade alignment

--- a/mod/quiz/styles.css
+++ b/mod/quiz/styles.css
@@ -505,15 +505,6 @@ table.quizreviewsummary td.cell {
     min-height: 2.85em;
 }
 
-@media (max-width: 576px) {
-    #page-mod-quiz-edit .maxgrade {
-        margin-bottom: 0.6em;
-    }
-    #page-mod-quiz-edit .maxgrade .form-control {
-        display: inline-block;
-        vertical-align: middle;
-    }
-}
 #page-mod-quiz-edit .maxgrade label {
     display: inline;
 }
